--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -46,5 +46,6 @@
         {{- partial "components/comments.html" . -}}
       </main>
     </article>
+    {{ partial "comments.html" . }}
   </div>
 {{ end }}
