--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -12,6 +12,7 @@
         {{ partial "components/last-updated.html" . }}
         {{ partial "components/pager.html" . }}
         {{ partial "components/comments.html" . }}
+        {{ partial "comments.html" . }}
       </main>
     </article>
   </div>
