--- a/layouts/list.html
+++ b/layouts/list.html
@@ -12,6 +12,7 @@
         <div class="hx:mt-16"></div>
         {{ partial "components/last-updated.html" . }}
         {{ partial "components/comments.html" . }}
+        {{ partial "comments.html" . }}
       </main>
     </article>
   </div>
