--- a/layouts/single.html
+++ b/layouts/single.html
@@ -13,6 +13,7 @@
         </div>
         <div class="hx:mt-16"></div>
         {{ partial "components/comments.html" . }}
+        {{ partial "comments.html" . }}
       </main>
     </article>
   </div>
