--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -12,6 +12,28 @@
             <p> 最后更新于 {{ .Lastmod.Year }} 年 {{ printf "%d" .Lastmod.Month }} 月 {{ .Lastmod.Day }} 日</p>
         {{ end }}    
         
+
+        {{- /* 标题下方标签显示代码 */ -}}
+        {{- if .Params.tags -}}
+        <div class="hx:mt-2 hx:mb-6 hx:flex hx:flex-wrap hx:gap-2">
+          {{- range $tag := .Params.tags -}}
+            {{- /* 获取标签页面的链接 */ -}}
+            {{- $tagPage := site.GetPage (printf "/tags/%s" ($tag | urlize)) -}}
+            {{- $href := "" -}}
+            {{- if $tagPage -}}
+              {{- $href = $tagPage.RelPermalink -}}
+            {{- else -}}
+              {{- $href = printf "/tags/%s/" ($tag | urlize) | relLangURL -}}
+            {{- end -}}
+
+            <a href="{{ $href }}" 
+              class="hx:inline-block hx:whitespace-nowrap hx:rounded-md hx:bg-gray-100 hx:px-2 hx:py-0.5 hx:text-sm hx:font-medium hx:text-gray-600 hx:transition-colors hx:hover:bg-primary-100 hx:hover:text-primary-700 hx:dark:bg-neutral-800 hx:dark:text-gray-400 hx:dark:hover:bg-primary-900/30 hx:dark:hover:text-primary-400">
+              #{{ $tag }}
+            </a>
+          {{- end -}}
+        </div>
+        {{- end -}}
+
         <div class="hx:mt-4 hx:mb-16 hx:text-gray-500 hx:dark:text-gray-400 hx:text-sm hx:flex hx:items-center hx:flex-wrap hx:gap-y-2">
           {{- with $date := .Date }}<span class="hx:mr-1">{{ partial "utils/format-date" $date }}</span>{{ end -}}
           {{- $lazyLoading := site.Params.enableImageLazyLoading | default true -}}
